Finished Dark/Light mode switch and Langauge switch using Provider and SP.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -10,5 +10,11 @@
 "select_date" : "اختر الوقت",
 "add" : "ضف المهمه",
 "edit_task":"تعديل المهمه",
-"save_changes" : "قم بالتعديل"
+"save_changes" : "قم بالتعديل",
+"language" : "اللغة",
+"english" : "الانجليزيه",
+"arabic" : "العربية",
+"mode" : "النمط",
+"light" : "مضئ",
+"dark" : "داكن"
 }
