Fixed some issues with localizations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -17,8 +17,9 @@
 "mode" : "النمط",
 "light" : "مضئ",
 "dark" : "داكن",
-"add_message" : "Task added successfully",
-"delete_message" : "Task deleted successfully",
-"edit_message" : "Task edited successfully",
-"done_message" : "Congratulations! Task is done"
+"done" : "انتهت",
+"add_message" : "تم اضافة المهمه بنجاح",
+"delete_message" : "تم حذف المهمه بنجاح",
+"edit_message" : "تم التعديل بنجاح",
+"done_message" : "تهانينا, لقد أنهيت المهمه"
 }
